public class Image {
    private String path;

    public Image(String path) {
        this.path = path;
    }

    public String getPath() {
        return this.path;
    }
}