public class Loader {
    public Chunk[] updateChunk(Point p1, Point p2) {
        
    }
}